api/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthylinkx-api-service
  labels:
    app: healthylinkx-api
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: healthylinkx-api
