api/k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthylinkx-api-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: healthylinkx-api
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: healthylinkx-api-service
          servicePort: 80
